--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mobileshop
+spring.datasource.username=root
+spring.datasource.password=lozinka
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+properties.setProperty("hibernate.dialect", "org.hibernate.dialect.MySQLDialect");
 
