--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mobileshop?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql}:3306/mobileshop?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=lozinka
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
